--- a/style.css
+++ b/style.css
@@ -2,19 +2,53 @@ body{
     font-family: 'Poppins', sans-serif;
     margin: 0;
 }
+footer p {
+text-align: center;
+font-size: 20px;
+}
 h1{
     font-size: 50px;
+}
+h2{
+    font-size: 40px;
 }
 .orange-color{
     color: #ffa500;
 }
-section{
+.flexible-container{
     display:flex;
     margin-bottom: 150px;
 }
 .half-with{
     width: 50%;
     padding-left: 10%;
+}
+.experience-area{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+.experience-item{
+    box-shadow: 10px 10px 40px gray;
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 10px;
+    padding-right: 5px;
+    border-radius: 10px;
+    border-left: 10px solid;
+}
+#web-dev-experience{
+    border-left: 7px solid;
+    border-image: linear-gradient(blue, cyan);
+    border-image-slice: 2;
+}
+#full-stack-experience{
+    border-left: 7px solid;
+    border-image: linear-gradient(rgb(78, 4, 16), rgb(34, 167, 156));
+    border-image-slice: 2;
+}
+
 }
 .half-with img{
     width: 70%;
