--- a/style.css
+++ b/style.css
@@ -23,6 +23,9 @@ h2{
     width: 50%;
     padding-left: 10%;
 }
+.half-with img{
+    width: 80%;
+}
 .experience-area{
     background-image: url(images/exp-bg.png);
     background-repeat: no-repeat;
